--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="update_error">Error during updating</string>
     <string name="try_again">Try again</string>
     <string name="an_error_occurred">An error occurred</string>
+    <string name="cocktail_saved">Cocktail Saved</string>
+    <string name="cocktail_already_saved">Cocktail already Saved</string>
     <string name="no_saved_cocktails_found">No saved cocktails found</string>
      <string name="server_error_please_try_again_later">Server error. Please try again later.</string>
     <string name="the_cocktail_was_not_found_please_try_again">The cocktail was not found, please try again</string>
